la dernière animation marche, mon code est parfaitement indenté, et aucune erreur au validateur W3 :fire:

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -15,9 +15,9 @@
 	</head>
 	<body>
 		<header class="header">
-            <div class="header__icon">
-			<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
-            </div>
+			<div class="header__icon">
+				<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
+			</div>
 			<h1 class="header__logo">ohmyfood</h1>
 		</header>
 		<main>
@@ -27,7 +27,6 @@
 			<section class="menu">
 				<header class="menu__header">
 					<div class="menu__title">
-
 						À la française
 					</div>
 					<div class="menu__favorite">
@@ -38,153 +37,171 @@
 				<div class="menu__container">
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
-						<div class="foodcard">
-							<div class="delay-0 foodcard__text">
-								<h4 class="foodcard__title">Tartare de poulpe acidulé</h4>
-								<p class="foodcard__description">
-									Aux zestes d'orange
+						<div class="cardcontainer">
+							<div class="foodcard">
+								<div class="delay-0 foodcard__text">
+									<h4 class="foodcard__title">Tartare de poulpe acidulé</h4>
+									<p class="foodcard__description">
+										Aux zestes d'orange
+									</p>
+								</div>
+								<p class="foodcard__price">
+									25€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								25€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-1 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Velouté de légumes d'antan</h4>
-								<p class="foodcard__description">
-									Carotte, panais, topinambour
+						<div class="cardcontainer">
+							<div class="delay-1 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Velouté de légumes d'antan</h4>
+									<p class="foodcard__description">
+										Carotte, panais, topinambour
+									</p>
+								</div>
+								<p class="foodcard__price">
+									35€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								35€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-2 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Soupe à l'oignon</h4>
-								<p class="foodcard__description">
-									Revisitée
+						<div class="cardcontainer">
+							<div class="delay-2 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Soupe à l'oignon</h4>
+									<p class="foodcard__description">
+										Revisitée
+									</p>
+								</div>
+								<p class="foodcard__price">
+									20€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								20€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
-						<div class="delay3 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Coquilles Saint-Jacques</h4>
-								<p class="foodcard__description">
-									Accompagnées d'une purée de panais
+						<div class="cardcontainer">
+							<div class="delay3 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Coquilles Saint-Jacques</h4>
+									<p class="foodcard__description">
+										Accompagnées d'une purée de panais
+									</p>
+								</div>
+								<p class="foodcard__price">
+									40€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								40€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-4 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Magret de canard</h4>
-								<p class="foodcard__description">
-									Et parmentier de pommes de terre
+						<div class="cardcontainer">
+							<div class="delay-4 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Magret de canard</h4>
+									<p class="foodcard__description">
+										Et parmentier de pommes de terre
+									</p>
+								</div>
+								<p class="foodcard__price">
+									35€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								35€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Pigeonneau d’Ille-et-Vilaine</h4>
-								<p class="foodcard__description">
-									Sur son lit de gnocchis aux légumes
+						<div class="cardcontainer">
+							<div class="foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Pigeonneau d’Ille-et-Vilaine</h4>
+									<p class="foodcard__description">
+										Sur son lit de gnocchis aux légumes
+									</p>
+								</div>
+								<p class="foodcard__price">
+									44€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								44€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
-						<div class="delay-5 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Pétales de violettes glacés</h4>
-								<p class="foodcard__description">
-									Et purée de noisettes
+						<div class="cardcontainer">
+							<div class="delay-5 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Pétales de violettes glacés</h4>
+									<p class="foodcard__description">
+										Et purée de noisettes
+									</p>
+								</div>
+								<p class="foodcard__price">
+									18€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								18€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-6 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Fondant au chocolat</h4>
-								<p class="foodcard__description">
-									revisité
+						<div class="cardcontainer">
+							<div class="delay-6 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Fondant au chocolat</h4>
+									<p class="foodcard__description">
+										revisité
+									</p>
+								</div>
+								<p class="foodcard__price">
+									22€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								22€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-7 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Millefeuille croustillant</h4>
-								<p class="foodcard__description">
-									Myrtilles et pâte d’amande
+						<div class="cardcontainer">
+							<div class="delay-7 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Millefeuille croustillant</h4>
+									<p class="foodcard__description">
+										Myrtilles et pâte d’amande
+									</p>
+								</div>
+								<p class="foodcard__price">
+									23€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								23€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -200,25 +217,13 @@
 				<h3 class="footer__logo">Ohmyfood</h3>
 				<ul class="footer__link">
 					<li class="footer__list">
-						<a href="#">	
-							<i class="fas fa-utensils footer__list1"></i>Proposer un restaurant
-						</a>
+						<a href="#"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</a>
 					</li>
 					<li class="footer__list ">
-						<a href="#">
-							<i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire
-						</a>
+						<a href="#"><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</a>
 					</li>
-					<li class="footer__list">
-						<a href="#">
-							Mentions légales
-						</a>
-					</li>
-					<li class="footer__list">
-						<a href="mailto:ohmyfood@ohmyfood.com">
-							Contact
-						</a>
-					</li>
+					<li class="footer__list"><a href="#">Mentions légales</a></li>
+					<li class="footer__list"><a href="mailto:ohmyfood@ohmyfood.com">Contact</a></li>
 				</ul>
 			</div>
 		</footer>
