--- a/lanotenenchantee.html
+++ b/lanotenenchantee.html
@@ -35,169 +35,189 @@
 				<div class="menu__container">
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
-						<div class="delay-0 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Ravioles de foie gras </h4>
-								<p class="foodcard__description">
-									Accompagnés de leur crème à la truffe
+						<div class="cardcontainer">
+							<div class="delay-0 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Ravioles de foie gras </h4>
+									<p class="foodcard__description">
+										Accompagnés de leur crème à la truffe
+									</p>
+								</div>
+								<p class="foodcard__price">
+									25€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								25€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-1 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Caviar osciètre </h4>
-								<p class="foodcard__description">
-									Sur blini à la farine de blé noir
+						<div class="cardcontainer">
+							<div class="delay-1 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Caviar osciètre </h4>
+									<p class="foodcard__description">
+										Sur blini à la farine de blé noir
+									</p>
+								</div>
+								<p class="foodcard__price">
+									20€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								20€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-2 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Homard et espuma de potiron</h4>
-								<p class="foodcard__description">
-									Mariné aux zestes d'orange
+						<div class="cardcontainer">
+							<div class="delay-2 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Homard et espuma de potiron</h4>
+									<p class="foodcard__description">
+										Mariné aux zestes d'orange
+									</p>
+								</div>
+								<p class="foodcard__price">
+									20€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								20€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-3 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Foie gras de canard cuit entier</h4>
-								<p class="foodcard__description">
-									Confiture de figue et pain toasté
+						<div class="cardcontainer">
+							<div class="delay-3 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Foie gras de canard cuit entier</h4>
+									<p class="foodcard__description">
+										Confiture de figue et pain toasté
+									</p>
+								</div>
+								<p class="foodcard__price">
+									35€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								35€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
-						<div class="delay-4 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Noix de coquilles Saint-Jacques</h4>
-								<p class="foodcard__description">
-									Sur lit de purée de céleri-rave
+						<div class="cardcontainer">
+							<div class="delay-4 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Noix de coquilles Saint-Jacques</h4>
+									<p class="foodcard__description">
+										Sur lit de purée de céleri-rave
+									</p>
+								</div>
+								<p class="foodcard__price">
+									40€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								40€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-5 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Langoustine poêlée</h4>
-								<p class="foodcard__description">
-									Purée de patate douce
+						<div class="cardcontainer">
+							<div class="delay-5 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Langoustine poêlée</h4>
+									<p class="foodcard__description">
+										Purée de patate douce
+									</p>
+								</div>
+								<p class="foodcard__price">
+									35€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								35€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-6 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Mijoté de queue de boeuf </h4>
-								<p class="foodcard__description">
-									Et riz sauvage aux zestes de citron
+						<div class="cardcontainer">
+							<div class="delay-6 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Mijoté de queue de boeuf </h4>
+									<p class="foodcard__description">
+										Et riz sauvage aux zestes de citron
+									</p>
+								</div>
+								<p class="foodcard__price">
+									44€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								44€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
-						<div class="delay-7 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Macaron noisette et chocolat</h4>
-								<p class="foodcard__description">
-									Glace au caramel brun et sel de Guérande
+						<div class="cardcontainer">
+							<div class="delay-7 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Macaron noisette et chocolat</h4>
+									<p class="foodcard__description">
+										Glace au caramel brun et sel de Guérande
+									</p>
+								</div>
+								<p class="foodcard__price">
+									18€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								18€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-8 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Baba au rhum revisité</h4>
-								<p class="foodcard__description">
-									Avec son coulis de citron
+						<div class="cardcontainer">
+							<div class="delay-8 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Baba au rhum revisité</h4>
+									<p class="foodcard__description">
+										Avec son coulis de citron
+									</p>
+								</div>
+								<p class="foodcard__price">
+									22€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								22€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-9 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tarte au citron meringuée </h4>
-								<p class="foodcard__description">
-									Déstructurée
+						<div class="cardcontainer">
+							<div class="delay-9 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Tarte au citron meringuée </h4>
+									<p class="foodcard__description">
+										Déstructurée
+									</p>
+								</div>
+								<p class="foodcard__price">
+									23€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								23€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -213,25 +233,13 @@
 				<h3 class="footer__logo">Ohmyfood</h3>
 				<ul class="footer__link">
 					<li class="footer__list">
-						<a href="#">	
-							<i class="fas fa-utensils footer__list1"></i>Proposer un restaurant
-						</a>
+						<a href="#"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</a>
 					</li>
 					<li class="footer__list ">
-						<a href="#">
-							<i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire
-						</a>
+						<a href="#"><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</a>
 					</li>
-					<li class="footer__list">
-						<a href="#">
-							Mentions légales
-						</a>
-					</li>
-					<li class="footer__list">
-						<a href="mailto:ohmyfood@ohmyfood.com">
-							Contact
-						</a>
-					</li>
+					<li class="footer__list"><a href="#">Mentions légales</a></li>
+					<li class="footer__list"><a href="mailto:ohmyfood@ohmyfood.com">Contact</a></li>
 				</ul>
 			</div>
 		</footer>
