--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -16,9 +16,9 @@
 	<body>
 		<header class="header">
 			<div class="header__icon">
-                <a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
-                </div>
-            <h1 class="header__logo">ohmyfood</h1>
+				<a href="index.html"><i class="fas fa-arrow-left iconback"></i></a>
+			</div>
+			<h1 class="header__logo">ohmyfood</h1>
 		</header>
 		<main>
 			<div class="background">
@@ -37,57 +37,66 @@
 				<div class="menu__container">
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
-						<div class="delay-0 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Fricassée d'escargot</h4>
-								<p class="foodcard__description">
-									Au piment d'Espelette
+						<div class="cardcontainer">
+							<div class="delay-0 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Fricassée d'escargot</h4>
+									<p class="foodcard__description">
+										Au piment d'Espelette
+									</p>
+								</div>
+								<p class="foodcard__price">
+									25€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								25€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-1 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Foie gras de canard mi-cuit</h4>
-								<p class="foodcard__description">
-									Et ses copeaux de truffe noire
+						<div class="delay-0 foodcard"></div>
+						<div class="cardcontainer">
+							<div class="delay-1 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Foie gras de canard mi-cuit</h4>
+									<p class="foodcard__description">
+										Et ses copeaux de truffe noire
+									</p>
+								</div>
+								<p class="foodcard__price">
+									35€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								35€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-2 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Oeuf au plat</h4>
-								<p class="foodcard__description">
-									Assaisonné à la truffe sur lit de caviar
+						<div class="cardcontainer">
+							<div class="delay-2 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Oeuf au plat</h4>
+									<p class="foodcard__description">
+										Assaisonné à la truffe sur lit de caviar
+									</p>
+								</div>
+								<p class="foodcard__price">
+									20€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								20€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="menu__plats">
-						<h3 class="foodtitle">PLATS</h3>
+				</div>
+				<div class="menu__plats">
+					<h3 class="foodtitle">PLATS</h3>
+					<div class="cardcontainer">
 						<div class="delay-3 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Filet de boeuf aux herbes</h4>
@@ -100,10 +109,12 @@
 							</p>
 							<div class="foodcard__check">
 								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+									<i class="fas fa-check-circle iconecercle"></i>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="cardcontainer">
 						<div class="delay-4 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Parmentier de queue de boeuf</h4>
@@ -116,10 +127,12 @@
 							</p>
 							<div class="foodcard__check">
 								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+									<i class="fas fa-check-circle iconecercle"></i>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="cardcontainer">
 						<div class="delay-5 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Filet de turbot</h4>
@@ -132,13 +145,15 @@
 							</p>
 							<div class="foodcard__check">
 								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+									<i class="fas fa-check-circle iconecercle"></i>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="menu__dessert">
-						<h3 class="foodtitle">DESSERTS</h3>
+				</div>
+				<div class="menu__dessert">
+					<h3 class="foodtitle">DESSERTS</h3>
+					<div class="cardcontainer">
 						<div class="delay-6 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Paris-Brest</h4>
@@ -151,10 +166,12 @@
 							</p>
 							<div class="foodcard__check">
 								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+									<i class="fas fa-check-circle iconecercle"></i>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="cardcontainer">
 						<div class="delay-7 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Macaron au chocolat d'exception</h4>
@@ -167,10 +184,12 @@
 							</p>
 							<div class="foodcard__check">
 								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+									<i class="fas fa-check-circle iconecercle"></i>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="cardcontainer">
 						<div class="delay-8 foodcard">
 							<div class="foodcard__text">
 								<h4 class="foodcard__title">Mousse au chocolat</h4>
@@ -183,43 +202,32 @@
 							</p>
 							<div class="foodcard__check">
 								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+									<i class="fas fa-check-circle iconecercle"></i>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="commander">
-					<button class="commanderbtn">Commander</button>
-				</div>
-			</section>
-		</main>
-		<footer class="footer">
-			<div class="footer__content">
-				<h3 class="footer__logo">Ohmyfood</h3>
-				<ul class="footer__link">
-					<li class="footer__list">
-						<a href="#">	
-							<i class="fas fa-utensils footer__list1"></i>Proposer un restaurant
-						</a>
-					</li>
-					<li class="footer__list ">
-						<a href="#">
-							<i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire
-						</a>
-					</li>
-					<li class="footer__list">
-						<a href="#">
-							Mentions légales
-						</a>
-					</li>
-					<li class="footer__list">
-						<a href="mailto:ohmyfood@ohmyfood.com">
-							Contact
-						</a>
-					</li>
-				</ul>
 			</div>
-		</footer>
-	</body>
+			<div class="commander">
+				<button class="commanderbtn">Commander</button>
+			</div>
+		</section>
+	</main>
+	<footer class="footer">
+		<div class="footer__content">
+			<h3 class="footer__logo">Ohmyfood</h3>
+			<ul class="footer__link">
+				<li class="footer__list">
+					<a href="#"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</a>
+				</li>
+				<li class="footer__list ">
+					<a href="#"><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</a>
+				</li>
+				<li class="footer__list"><a href="#">Mentions légales</a></li>
+				<li class="footer__list"><a href="mailto:ohmyfood@ohmyfood.com">Contact</a></li>
+			</ul>
+		</div>
+	</footer>
+</body>
 
