--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -35,153 +35,171 @@
 				<div class="menu__container">
 					<div class="menu__entrées">
 						<h3 class="foodtitle">ENTRÉES</h3>
-						<div class="delay-0 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tartare de thon</h4>
-								<p class="foodcard__description">
-									Assaisonné au yuzu
+						<div class="cardcontainer">
+							<div class="delay-0 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Tartare de thon</h4>
+									<p class="foodcard__description">
+										Assaisonné au yuzu
+									</p>
+								</div>
+								<p class="foodcard__price">
+									25€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								25€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-1 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Bouchée de homard croustillant </h4>
-								<p class="foodcard__description">
-									Et sa farandole de petits légumes
+						<div class="cardcontainer">
+							<div class="delay-1 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Bouchée de homard croustillant </h4>
+									<p class="foodcard__description">
+										Et sa farandole de petits légumes
+									</p>
+								</div>
+								<p class="foodcard__price">
+									35€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								35€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-2 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Velouté de cèpes </h4>
-								<p class="foodcard__description">
-									Aux truffes
+						<div class="cardcontainer">
+							<div class="delay-2 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Velouté de cèpes </h4>
+									<p class="foodcard__description">
+										Aux truffes
+									</p>
+								</div>
+								<p class="foodcard__price">
+									20€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								20€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="menu__plats">
 						<h3 class="foodtitle">PLATS</h3>
-						<div class="delay-3 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Poulet rôti aux herbes de Provence</h4>
-								<p class="foodcard__description">
-									Et sa crème de truffe
+						<div class="cardcontainer">
+							<div class="delay-3 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Poulet rôti aux herbes de Provence</h4>
+									<p class="foodcard__description">
+										Et sa crème de truffe
+									</p>
+								</div>
+								<p class="foodcard__price">
+									40€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								40€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-4 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Langouste rôtie</h4>
-								<p class="foodcard__description">
-									Et ses légumes de saison
+						<div class="cardcontainer">
+							<div class="delay-4 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Langouste rôtie</h4>
+									<p class="foodcard__description">
+										Et ses légumes de saison
+									</p>
+								</div>
+								<p class="foodcard__price">
+									35€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								35€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-5 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Côte de boeuf Angus</h4>
-								<p class="foodcard__description">
-									Et sa purée de panais
+						<div class="cardcontainer">
+							<div class="delay-5 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Côte de boeuf Angus</h4>
+									<p class="foodcard__description">
+										Et sa purée de panais
+									</p>
+								</div>
+								<p class="foodcard__price">
+									44€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								44€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="menu__dessert">
 						<h3 class="foodtitle">DESSERTS</h3>
-						<div class="delay-6 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Farandole de desserts</h4>
-								<p class="foodcard__description">
-									Du chef
+						<div class="cardcontainer">
+							<div class="delay-6 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Farandole de desserts</h4>
+									<p class="foodcard__description">
+										Du chef
+									</p>
+								</div>
+								<p class="foodcard__price">
+									18€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								18€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-7 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Crème brulée </h4>
-								<p class="foodcard__description">
-									Revisitée
+						<div class="cardcontainer">
+							<div class="delay-7 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Crème brulée </h4>
+									<p class="foodcard__description">
+										Revisitée
+									</p>
+								</div>
+								<p class="foodcard__price">
+									22€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								22€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="delay-8 foodcard">
-							<div class="foodcard__text">
-								<h4 class="foodcard__title">Tiramisu</h4>
-								<p class="foodcard__description">
-									À la noisette
+						<div class="cardcontainer">
+							<div class="delay-8 foodcard">
+								<div class="foodcard__text">
+									<h4 class="foodcard__title">Tiramisu</h4>
+									<p class="foodcard__description">
+										À la noisette
+									</p>
+								</div>
+								<p class="foodcard__price">
+									23€
 								</p>
-							</div>
-							<p class="foodcard__price">
-								23€
-							</p>
-							<div class="foodcard__check">
-								<div class="foodcard__checkcircle">
-								<i class="fas fa-check-circle iconecercle"></i>
+								<div class="foodcard__check">
+									<div class="foodcard__checkcircle">
+										<i class="fas fa-check-circle iconecercle"></i>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -197,25 +215,13 @@
 				<h3 class="footer__logo">Ohmyfood</h3>
 				<ul class="footer__link">
 					<li class="footer__list">
-						<a href="#">	
-							<i class="fas fa-utensils footer__list1"></i>Proposer un restaurant
-						</a>
+						<a href="#"><i class="fas fa-utensils footer__list1"></i>Proposer un restaurant</a>
 					</li>
 					<li class="footer__list ">
-						<a href="#">
-							<i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire
-						</a>
+						<a href="#"><i class="fas fa-hands-helping footer__list2"></i>Devenir partenaire</a>
 					</li>
-					<li class="footer__list">
-						<a href="#">
-							Mentions légales
-						</a>
-					</li>
-					<li class="footer__list">
-						<a href="mailto:ohmyfood@ohmyfood.com">
-							Contact
-						</a>
-					</li>
+					<li class="footer__list"><a href="#">Mentions légales</a></li>
+					<li class="footer__list"><a href="mailto:ohmyfood@ohmyfood.com">Contact</a></li>
 				</ul>
 			</div>
 		</footer>
